SERVER-29799 Fix shardCollection request to include passthrough fields